# edtwt

./: .env.example  .gitignore  README.md  bert.ipynb  edtwt.py  pyproject.toml
entregas/: README.md
entregas/p1/: entrega_1.csv
entregas/p2/: entrega_2.csv  entrega_2_tfidf_features.json
entregas/p3/: embeddings.ipynb  entrega_3_word2vec_features.json
entregas/p4/: embeddings.ipynb  entrega_4_bert_features.json
exports/: tweets_anonymized.csv
extrator/: anonymizer.py  anonymizer_interface.py  entrega.py  entrega_interface.py  extraction_progress.py  extrator.py  interface.py  storage.py
extrator/models/: Tweet.py
processadores/: __init__.py  entrega_1.py  entrega_2.py  entrega_3.py  entrega_4.py
