[project]
name = "edtwt"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro Henrique Windisch",email = "pedrowindisch@gmail.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "textual (>=8.1.1,<9.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
