[project]
name = "edtwt"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro Henrique Windisch",email = "pedrowindisch@gmail.com"}
]
requires-python = ">=3.13,<3.15"
dependencies = [
    "textual (>=8.1.1,<9.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "nltk (>=3.9.4,<4.0.0)",
    "spacy (>=3.8.13,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
